--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cordova-assets",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "author": "Cesidio DiBenedetto <sid.dibenedetto@gmail.com>",
     "description": "Generate all icons, splashscreens for given platforms",
     "keywords": [
@@ -9,7 +9,7 @@
         "icons",
         "splashscreen"
     ],
-    "preferGlobal": true,
+    "packageName": "cordova-assets",
     "repository": {
         "type": "git",
         "url": "https://github.com/cdibened/cordova-assets.git"
